0.5.0.pre8
 * upgrade gems activerecord, minitest, haml-lint, redcarpet

0.5.0.pre7 (August 3rd 2014)

 * UI improvements to repo browser (@acant)
 * upgrade dependencies (@acant)
 * add integration testing for repo browser (@acant)
 * include hidden files in directory listing (@acant)
 * refactor the server, cleanup file manipulation (@acant)
 * add fetch only syncing for repositories (@acant)
 * add sync status for reach repository in the CLI status (@acant)
 * fix display of hidden files in the web UI (@acant)

0.5.0.pre6 (May 24th 2014)

 * Remove the load_browser_on_startup config option (@acant)
 * Stop the addition of extra conflict markers (@acant)
 * Separate the commit and push methods in repository (@acant)

0.5.0.pre5 (May 14th 2014)

 * Cleanup behavior on empty commits
 * Improve pre-commit working directory change
 * More rugged / grit conversions
 * Update remote check to rugged
 * Re-write empty directory tagging to use Find

0.5.0.pre4 (April 15th 2014)

 * Fix a performance bug related to using Rugged for the "push" (@acant)

0.5.0.pre3 (3/30/2014)

 * Eliminate sleep from sync integration test (@acant)
 * More rugged git conversion this time for the "push"

0.5.0.pre2 (3/9/2014)

 * Convert to use rugged and Grit (@acant)
 * Removed automatically opening the UI on start (@aqtrans)

0.5.0.pre1 (11/25/2013)

 * Upgrade thin gem to v1.5.1 (@acant)
 * Add TravisCI configuration (@acant)
 * Rescue StandardError and better error notifications to fix crashes (@acant)
 * Reduce unexpected exists caused by repository and file system errors
 * Add notification of unexpected daemon exist
 * Add 'open' command to CLI for opening web app (@acant)
 * Drop support for Ruby 1.8 (@acant)
 * Code style updates (@acant)
 * Display file system watch method in status (@acant)

0.4.15 (8/29/2012)

  * Adds a 'new directory' function to front-end [thanks Kale Worsley]
  * Change 'New file' function to actually create a blank file [thanks Kale Worsley]