@@ -8,7 +8,7 @@ GitDocs = {
     var paths = fullPath.split("/");
     $(paths).each(function(idx, subpath) {
       var relPath = paths.slice(0, idx+1).join("/");
-      var link = "<a href='/" + docIdx[1] + relPath + "'>" + subpath + "/</a>";
+      var link = "<a href='" + relPath + "'>" + subpath + "/</a>";
       fullPath = fullPath.replace(subpath + "/", link);
     });
     $('span.path').html(fullPath);
@@ -83,7 +83,7 @@ $('form.add input.file').live('click', function(e) {
   var docIdx = window.location.pathname.match(/\/(\d+)/);
   if (!docIdx) { return false; }
   var fullPath = $('span.path').text();
-  var newPath = "/" + docIdx[1] + (fullPath == "/" ? "/" : fullPath + "/") + $(this).parents('form').find('input.edit').val();
+  var newPath = (fullPath == "/" ? "/" : fullPath + "/") + $(this).parents('form').find('input.edit').val();
   window.location = newPath;
   e.preventDefault(); return false;
 });
@@ -92,7 +92,7 @@ $('form.add input.directory').live('click', function(e) {
   var docIdx = window.location.pathname.match(/\/(\d+)/);
   if (!docIdx) { return false; }
   var fullPath = $('span.path').text();
-  var newPath = "/" + docIdx[1] + (fullPath == "/" ? "/" : fullPath + "/") + $(this).parents('form').find('input.edit').val() + '?dir=true';
+  var newPath = (fullPath == "/" ? "/" : fullPath + "/") + $(this).parents('form').find('input.edit').val() + '?dir=true';
   window.location = newPath;
   e.preventDefault(); return false;
 });
