@@ -1,6 +1,6 @@
 - @title = root
 
-= partial('header', locals: { file: false, idx: idx })
+= haml(:_header, locals: { file: false, idx: idx })
 
 - if contents && contents.any?
   %table#fileListing.condensed-table.zebra-striped
@@ -16,7 +16,7 @@
         %tr
           %td
             %img{ src: "/img/#{f.is_directory ? 'folder' : 'file'}.png", width: 16, height: 16 }
-            %a{ href: "/#{idx}#{request.path_info}/#{f.name}" }
+            %a{ href: "#{request.path_info}/#{f.name}" }
               = f.name
           %td.author
           %td.modified
@@ -27,7 +27,7 @@
 
 .row
   .span6
-    %form.upload{ method: 'POST', enctype: 'multipart/form-data', action: "/#{idx}#{request.path_info}?mode=upload" }
+    %form.upload{ method: 'POST', enctype: 'multipart/form-data', action: "#{request.path_info}?mode=upload" }
       %p Upload file to this directory
       %input.uploader{ type: 'file',   value: 'Select a file', name: 'file', size: 12 }
       %input.btn.secondary{ type: 'submit', value: 'Upload file' }
