@@ -7,4 +7,4 @@
     %tr
       %td
         %a{ href: "/#{idx}" }
-          = share.path
+          = share.root
