@@ -1,6 +1,6 @@
 - @title = root
 
-= partial('header', locals: { file: true, idx: idx })
+= haml(:_header, locals: { file: true, idx: idx })
 
 - if revisions && revisions.any?
   %table#revisions.condensed-table.zebra-striped
