@@ -1,5 +1,6 @@
 0.5.0.pre8
- * upgrade gems activerecord, minitest, haml-lint, redcarpet
+ * upgrade gems activerecord, minitest, haml-lint, redcarpet (@acant)
+ * convert web interface to use Sinatra instead of renee (@acant)
 
 0.5.0.pre7 (August 3rd 2014)
 
